--- a/dev_work_bootstrap/tasks/general.yaml
+++ b/dev_work_bootstrap/tasks/general.yaml
@@ -33,35 +33,7 @@
         extra_opts:
           - --strip-components=1
 
-- name: Install taskfile
+- name: Include taskfile tasks
+  ansible.builtin.include_tasks: tools/taskfile.yaml
   tags:
     - taskfile
-  block:
-    - name: Create temp directory for taskfile
-      ansible.builtin.tempfile:
-        state: directory
-      register: taskfile_tmp_dir
-    - name: Download taskfile
-      ansible.builtin.unarchive:
-        src: "https://github.com/go-task/task/releases/latest/download/\
-          task_{{ ansible_system | lower }}_{{ task[ansible_system][ansible_architecture] }}.tar.gz"
-        dest: "{{ taskfile_tmp_dir.path }}"
-        mode: "0755"
-        keep_newer: true
-        remote_src: true
-    - name: Install taskfile bin
-      ansible.builtin.copy:
-        src: "{{ taskfile_tmp_dir.path }}/task"
-        dest: $HOME/.local/bin/task
-        mode: "0755"
-    - name: Install taskfile bash completion
-      ansible.builtin.copy:
-        src: "{{ taskfile_tmp_dir.path }}/completion/bash/task.bash"
-        dest: $HOME/.local/share/bash-completion/task.bash
-        mode: "0755"
-        # I don't know where zsh completion is supposed to go
-        # - name: Install zsh completion
-        #   ansible.builtin.copy:
-        #     src: "{{ taskfile_tmp_dir.path }}/completion/zsh/_task"
-        #     dest: $HOME/.local/share/zsh/site-functions/_task
-        #     mode: "0755"
