add support for command-not-found

--- a/dev_work_bootstrap/tasks/os_family/darwin.yaml
+++ b/dev_work_bootstrap/tasks/os_family/darwin.yaml
@@ -11,3 +11,7 @@
     name: "{{ brew_packages }}"
     state: "latest"
     install_options: overwrite
+- name: Tap a homebrew repository
+  community.general.homebrew_tap:
+    name:
+      - homebrew/command-not-found
