--- a/dev_work_bootstrap/tasks/os_family/debian.yaml
+++ b/dev_work_bootstrap/tasks/os_family/debian.yaml
@@ -6,6 +6,7 @@
     update_cache: true
     name:
       - python3-apt
+      - command-not-found
       - tmux
       # pyenv dependencies
       - build-essential
