--- a/dev_work_bootstrap/tasks/shell.yaml
+++ b/dev_work_bootstrap/tasks/shell.yaml
@@ -71,3 +71,8 @@
 #     curl -L -s https://github.com/alacritty/alacritty/releases/latest/download/alacritty.info | sudo tic -xe alacritty,alacritty-direct -
 #   tags:
 #     - alacritty
+- name: Install oh-my-zsh
+  ansible.builtin.git:
+    dest: $HOME/.oh-my-zsh/
+    repo: https://github.com/ohmyzsh/ohmyzsh.git
+    update: true
