--- a/dev_work_bootstrap/tasks/shell.yaml
+++ b/dev_work_bootstrap/tasks/shell.yaml
@@ -1,4 +1,3 @@
----
 # yaml-language-server: $schema=https://raw.githubusercontent.com/ansible/ansible-lint/main/src/ansiblelint/schemas/ansible.json#/$defs/tasks
 - name: Setup dotfiles
   tags:
@@ -18,6 +17,11 @@
     - name: Ensure dotfile repo is up to date
       ansible.builtin.command: # noqa: no-changed-when command-instead-of-module
         cmd: git --git-dir=$HOME/.cfg/ --work-tree=$HOME pull --force
+    - name: dotfiles do not show untracked files
+      general.community.git_config:
+        repo: $HOME/.cfg
+        name: status.showUntrackedFiles
+        value: "no"
 - name: Setup authorized_keys
   tags:
     - authorized_keys
@@ -32,7 +36,6 @@
         src: authorized_keys
         dest: $HOME/.ssh/authorized_keys
         mode: "0600"
-
 - name: Install bash-it # noqa: latest[git]
   ansible.builtin.git:
     dest: $HOME/.bash_it
@@ -53,7 +56,6 @@
         depth: 1
         dest: "$HOME/.zsh/spaceship"
         recursive: false
-
 - name: Tmux completions
   ansible.builtin.get_url:
     url: https://raw.githubusercontent.com/imomaliev/tmux-bash-completion/master/completions/tmux
@@ -76,3 +78,19 @@
     dest: $HOME/.oh-my-zsh/
     repo: https://github.com/ohmyzsh/ohmyzsh.git
     update: true
+- name: Git config autoSetupRemote
+  community.general.git_config:
+    scope: global
+    name: push.autoSetupRemote
+    value: true
+- name: Git config push.default
+  community.general.git_config:
+    scope: global
+    name: push.default
+    value: upstream
+- name: Install autoenv
+  ansible.builtin.git:
+    repo: https://github.com/hyperupcall/autoenv
+    dest: $HOME/.autoenv
+    depth: 1
+    recursive: false
