--- a/dev_work_bootstrap/defaults/main.yml
+++ b/dev_work_bootstrap/defaults/main.yml
@@ -1,5 +1,4 @@
 # SPDX-License-Identifier: MIT-0
----
 # defaults file for dev_work_bootstrap
 rustup_bin: $HOME/.cargo/bin/rustup
 lazydocker:
@@ -188,3 +187,10 @@ ripgrep_suffix:
   Darwin:
     x86_64: ""
     arm64: ""
+trivy:
+  Linux:
+    x86_64: "64bit"
+    aarch64: "ARM64"
+  Darwin:
+    x86_64: "64bit"
+    arm64: "ARM64"
