--- a/dev_work_bootstrap/tasks/tools/trivy.yaml
+++ b/dev_work_bootstrap/tasks/tools/trivy.yaml
@@ -9,7 +9,7 @@
 - name: Install trivy
   ansible.builtin.unarchive:
     src: "https://github.com/aquasecurity/trivy/releases/download/{{ trivy_latest.json.tag_name
-      }}/trivy_{{ trivy_latest | replace('v', '') }}_{{ 'macOS' if ansible_system
+      }}/trivy_{{ trivy_latest.json.tag_name | replace('v', '') }}_{{ 'macOS' if ansible_system
       == 'Darwin' else ansible_system }}-{{ trivy[ansible_system][ansible_architecture]
       }}.tar.gz"
     dest: $HOME/.local/bin
