--- a/dev_work_bootstrap/defaults/main.yml
+++ b/dev_work_bootstrap/defaults/main.yml
@@ -1,3 +1,4 @@
+---
 # SPDX-License-Identifier: MIT-0
 # defaults file for dev_work_bootstrap
 rustup_bin: $HOME/.cargo/bin/rustup
@@ -194,3 +195,10 @@ trivy:
   Darwin:
     x86_64: "64bit"
     arm64: "ARM64"
+mise:
+  Linux:
+    x86_64: x64
+    aarch64: arm64
+  Darwin:
+    x86_64: x64
+    arm64: arm64
