only install 1 tool at a time to reduce github error rate

--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -65,7 +65,7 @@ jobs:
       - name: "Execute commands"
         run: |
           mise --version
-          mise install
+          mise install --jobs=1
           uv --version
           aqua --version
           ubi --version
